Upgrade to Spring Boot 4.0.2 and Java 25; refactor OIDC E2E test, Hibernate equals/hashCode, and Authorization Server configuration; add OpenRewrite for Spring Boot 4 migration.